# aether_query

./: .gitignore  README.md  aether_query.sln
AetherQuery_Ecosystem/api_spec/: openapi.yaml  query_protocol.md
AetherQuery_Ecosystem/api_spec/examples/: basic_query.json  error_response.yaml
AetherQuery_Ecosystem/api_spec/types/: common_types.yaml  query_request.yaml  query_response.yaml
AetherQuery_Ecosystem/csharp_client/: AetherQuery.csproj  NativeClient.cs  Program.cs  WasmClient.cs  readme_go_server_csharp.md
AetherQuery_Ecosystem/csharp_client/go_server/: build_wasm.sh  go.mod  run_server.sh  server.go  shared.go  wasm.go
AetherQuery_Ecosystem/javascript/: readme.md
AetherQuery_Ecosystem/javascript/goja-client/: Makefile  coverage.html  go.mod  main.go
AetherQuery_Ecosystem/javascript/goja-client/examples/: basic-query.js
AetherQuery_Ecosystem/javascript/goja-client/internal/core/: client.go  client_test.go  errors.go  http.go  models.go  utils.go  utils_test.go
AetherQuery_Ecosystem/javascript/goja-client/internal/goja/: bindings.go  console.go  core_bindings_test.go  fs.go  modules.go  runtime.go
AetherQuery_Ecosystem/javascript/goja-client/internal/goja/js/: aetherquery.js  utils.js
AetherQuery_Ecosystem/javascript/goja-client/internal/js/api/: aetherquery.js  http.js
AetherQuery_Ecosystem/javascript/goja-client/internal/js/lib/: utils.js
AetherQuery_Ecosystem/python/: .gitignore  aetherquery_server.py  pyproject.toml  readme.md  requirements.txt  test_real_server.py
AetherQuery_Ecosystem/python/aetherquery/: _init_.py  client.py  exceptions.py
AetherQuery_Ecosystem/python/examples/: basic_usage.py
AetherQuery_Ecosystem/python/tests/: test_client.py
AetherQuery_Ecosystem/rust_client/: Cargo.toml  readme.md  test.txt  test_queries.sql  Команды для тестирования запуска Rust-клиента.txt
AetherQuery_Ecosystem/rust_client/src/: cli.rs  client.rs  error.rs  lib.rs  main.rs  output.rs
AetherQuery_Framework/: go.mod  run.sh  Тестирование запросов.txt
AetherQuery_Framework/cmd/server/: main.go
legacy_migration/: requirements.txt
legacy_migration/AetherQuery_framework/: Makefile  README.md  make_command.txt  pyproject.toml
legacy_migration/AetherQuery_framework/examples/: debug_sqlite.py  mongodb.example.py  mysql_example.py  postgresql_example.py  redis_example.py  sqlite_example.py
legacy_migration/AetherQuery_framework/tests/: test_mongodb_adapter.py  test_mysql_adapter.py  test_postgresql_adapter.py  test_redis_adapter.py  test_sqlite_adapter.py
