[project]
name = "aetherquery-python"
version = "0.1.0"
description = "Python client for AetherQuery API"
readme = "README.md"
authors = [
    {name = "AetherQuery Team", email = "team@aetherquery.com"},
]
license = {text = "MIT"}
keywords = ["aetherquery", "sql", "database", "client", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Автоматически определяем requires-python на основе текущей версии
requires-python = ">=3.8"

# Зависимости с гибкими версиями
dependencies = [
    "requests",  # Широкий диапазон совместимости
]

# Опциональные зависимости
[project.optional-dependencies]
# Для асинхронной работы
async = [
    "aiohttp",
    "httpx",
]
# Для типизации и валидации
types = [
    "pydantic",
    "types-requests",  # Тайп-стабы для requests
]
# Для разработки
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "ruff",
    "pre-commit",
]
# Для документации
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]
# Для тестирования с реальными БД
test-db = [
    "pytest-docker",
    "sqlite3",  # Встроен в Python
]

# URLs проекта
[project.urls]
Homepage = "https://github.com/aetherquery/python-client"
Documentation = "https://aetherquery.github.io/python-client"
Repository = "https://github.com/aetherquery/python-client"
Changelog = "https://github.com/aetherquery/python-client/releases"
Issues = "https://github.com/aetherquery/python-client/issues"

# Система сборки
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Настройки для pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "async: marks tests as async tests",
]

# Настройки для black
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# Настройки для isort
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

# Настройки для mypy
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

# Настройки для ruff
[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

# Настройки версий (можно обновлять автоматически)
[tool.poetry]
# Если используете poetry вместо pip