[package]
name = "rust_client"
version = "0.1.0"
edition = "2024"

[dependencies]
anymap = "0.12.1"
buf_redux = "0.8.4"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive", "env", "string"] }
multer = "3.1.0"
multipart = "0.18.0"
reqwest = { version = "0.12.24", features = ["json"] }
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
typemap = "0.3.3"
urlencoding = "2.1.3"
